[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ColoredGridRect.gd" type="Script" id=1]
[ext_resource path="res://assets/desert/icons/cacstus.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.8 )
border_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.84, 0.48, 0.4, 0.7 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ColoredGridRect" type="Control"]
anchor_right = 0.1
anchor_bottom = 0.1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InsidePanel" type="Panel" parent="."]
anchor_left = 0.025
anchor_top = 0.025
anchor_right = 0.975
anchor_bottom = 0.975
mouse_filter = 1
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.75 )
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
